Almost correct layout for articles on account page. Add styles for scrollbars. Refactoring.

--- a/src/app.style.scss
+++ b/src/app.style.scss
@@ -90,6 +90,10 @@ body {
   position: relative;
 }
 
+.overflow-x {
+  overflow-x: auto;
+}
+
 .full-screen-height {
   height: 100vh;
 }
@@ -118,4 +122,14 @@ body {
 
 .show-line-breaks {
   white-space: pre-line;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
