--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -34,32 +34,10 @@
 }
 
 .account-article-card {
-  max-height: 180px;
-  max-width: 300px;
+  height: 166px;
+  width: 180px;
 }
 
 .account-article-card-content {
-  width: 280px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.articles-list {
-  /*this works*/
-  width: 500px;
-  display: block;
-  overflow-x: auto;
-  /*this works END*/
-
-  /*test*/
-  /*width: 100%;*/
-  /*display: block;*/
-
-  /**/
-  /*width: inherit;*/
-  /*display: block;*/
-
-  /**/
-  /*overflow-x: scroll;*/
+  /*overflow-y: hidden;*/
 }
